Fix tests (-_-)